--- a/minikube/podinfo/deployments/sample-deployment.yaml
+++ b/minikube/podinfo/deployments/sample-deployment.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: Frontend
+  namespace: default
 spec:
   minReadySeconds: 3
   revisionHistoryLimit: 5
