--- a/minikube/podinfo/deployments/sample-deployment.yaml
+++ b/minikube/podinfo/deployments/sample-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: backend
   namespace: default
 spec:
   minReadySeconds: 3
